Certmanager code and Namespace code added

--- a/Kubernetes/04_namespaces/AccessControl(RBAC)/nginx-deploy.yaml
+++ b/Kubernetes/04_namespaces/AccessControl(RBAC)/nginx-deploy.yaml
@@ -1,34 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: httpd
-  namespace: default  
+  name: nginx-deploy
+  labels: 
+    app: nginx-deploy
+  namespace: dev-team
 spec:
-  replicas: 5
+  replicas: 3
   selector:
     matchLabels:
-      app: httpd
+      app: nginx-deploy
   template:
     metadata:
       labels:
-        app: httpd
+        app: nginx-deploy
     spec:
       containers:
-      - name: httpd
-        image: httpd
+      - name: nginx
+        image: nginx
         ports:
         - containerPort: 80
-        env:
-        - name: TITLE
-          value: "APACHE APP2"
+      resources:
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: httpd  
+  name: nginx-service
+  namespace: dev-team  
 spec:
   type: ClusterIP
   ports:
   - port: 80
   selector:
-    app: httpd
+    app: nginx-deploy
