--- a/Kubernetes/04_namespaces/AccessControl(RBAC)/clusterrole.yaml
+++ b/Kubernetes/04_namespaces/AccessControl(RBAC)/clusterrole.yaml
@@ -1,5 +1,5 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole #Namespace specific
+kind: ClusterRole #Multiple Namespaces
 metadata:
   name: pod-log-reader
 rules:
